fix stretch background on landing page

--- a/static/media/less/core.less
+++ b/static/media/less/core.less
@@ -980,12 +980,11 @@ body.home {
 				}
 			}
 		}
-		background-image:url('../img/background-chalkboard-green.jpg');
-		background-repeat:no-repeat;
-		-webkit-background-size:cover;
-		-moz-background-size:cover;
-		-o-background-size:cover;
-		background-size:cover;
+     	background: url('../img/background-chalkboard-green.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 		filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/background-chalkboard-green.jpg', sizingMethod='scale');
 		-ms-filter:"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/background-chalkboard-green.jpg', sizingMethod='scale')";
 		overflow:visible;
